# pyops

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  release-please-config.json
.codex/: config.toml
.github/workflows/: ci.yml  docs.yml  mod-test.yml  release.yml
app/: .cta.json  .gitignore  CHANGELOG.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
app/.vite-hooks/: pre-commit
app/drizzle/: 0000_salty_pixie.sql  0001_add_tech_description.sql  0002_add_block_enabled.sql  0003_add_pollution.sql  0004_undo_log.sql  0005_add_block_snapshots.sql  0006_ignored-by-productivity-amount.sql  0007_research-productivity.sql  0008_reactor-neighbour-bonus.sql  0009_fluid-fuel-machines.sql  0010_module-preset-icon-default.sql  0011_solve-diagnosis-cache.sql  0012_temperature-fed-fluid-energy.sql  (+2 more)
app/e2e/: .gitignore  (+17 more)
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  vendor-node.sh
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
docs/: README.md  ai-assistant.md  architecture.md  bridge.md  configuration.md  data-pipeline.md  design.md  desktop.md  env.d.ts  index.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  roadmap.md  solver.md  tsconfig.json  vite.config.ts
mod/: combinator.lua  control.lua  data.lua  gui-styles.lua  info.json  settings.lua  summary.lua  sushi.lua  tasks.lua
scripts/: atlas-preview.html  build-icon-atlas.mjs  package-lock.json  package.json  reload-factorio-game  serve-atlas.mjs  tunnel-dev
(+500 files in other folders)
